--- a/client/src/assets/css/scores.css
+++ b/client/src/assets/css/scores.css
@@ -1,6 +1,5 @@
 .scores {
   height: auto;
-  max-height: 600px;
 }
 .scores td,
 .scores th {
@@ -10,6 +9,7 @@
   cursor: pointer;
   background-color: #d9d9d9;
 }
-.scores {
-  transition: max-height ease-in-out 0.5s;
+.ant-btn {
+  width: 48%;
+  border-radius: 0 !important;
 }
